--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ footer{
 </section>
 
 <footer>
-📞 9363940486 | ✉ kccoproducts@gmail.com  
+📞 9363940486 | ✉ kccocoproducts@gmail.com  
 <br>© 2026 Karthick Coirs – Palani, Tamil Nadu
 </footer>
 
