--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 body{
   margin:0;
   font-family:Georgia,serif;
-  background:linear-gradient(rgba(255,255,255,.85),rgba(255,255,255,.85)),
-  url('Lowec.jpeg');
+  background:linear-gradient(rgba(255,255,255,.85),rgba(255,255,255,.85)),url('Lowec.jpeg');
   background-size:cover;
   background-position:center;
   background-attachment:fixed;
   color:#222;
 }
-
-/* HEADER */
 header{
   background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('Lowec.jpeg');
   background-size:cover;
@@ -36,8 +33,6 @@ header img{
   border-radius:50%;
   margin-bottom:20px;
 }
-
-/* SECTIONS */
 section{
   max-width:1100px;
   margin:40px auto;
@@ -46,14 +41,11 @@ section{
   border-radius:10px;
   box-shadow:0 0 15px rgba(0,0,0,.15);
 }
-
 h2{
   color:#1b5e20;
   border-bottom:3px solid #1b5e20;
   padding-bottom:10px;
 }
-
-/* PRODUCTS */
 .products{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
@@ -70,9 +62,7 @@ h2{
   height:220px;
   object-fit:cover;
 }
-.card div{
-  padding:20px;
-}
+.card div{padding:20px}
 .card a{
   display:block;
   background:#1b5e20;
@@ -82,9 +72,6 @@ h2{
   text-decoration:none;
   font-weight:bold;
 }
-.card a:hover{background:#145214}
-
-/* FORM */
 input,textarea{
   width:100%;
   padding:10px;
@@ -100,8 +87,6 @@ button{
   border-radius:5px;
   font-size:16px;
 }
-
-/* FOOTER */
 footer{
   background:#1b5e20;
   color:white;
@@ -124,56 +109,32 @@ footer{
 <h2>Our Products</h2>
 <div class="products">
 
-<div class="card">
-<img src="Lowec.jpeg">
-<div><h3>Low EC Cocopeat</h3><p>Washed & buffered cocopeat for export quality farming.</p></div>
-<a href="low-ec-cocopeat.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Highec.jpeg">
-<div><h3>High EC Cocopeat</h3><p>Natural cocopeat for soil conditioning & landscaping.</p></div>
-<a href="high-ec-cocopeat.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Growbag.jpeg">
-<div><h3>Grow Bags</h3><p>Ready-to-use cocopeat grow bags for vegetables & flowers.</p></div>
-<a href="grow-bags.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Polutary.jpeg">
-<div><h3>Poultry Coco Pith</h3><p>Highly absorbent bedding for poultry farms.</p></div>
-<a href="poultry-coco-pith.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Nursery.jpeg">
-<div><h3>Nursery Cocopeat</h3><p>Fine cocopeat for seedlings & nurseries.</p></div>
-<a href="nursery-cocopeat.html">View Details</a>
-</div>
+<div class="card"><img src="Lowec.jpeg"><div><h3>Low EC Cocopeat</h3><p>Washed & buffered cocopeat for export farming.</p></div><a href="low-ec-cocopeat.html">View Details</a></div>
+<div class="card"><img src="Highec.jpeg"><div><h3>High EC Cocopeat</h3><p>Natural cocopeat for soil conditioning.</p></div><a href="high-ec-cocopeat.html">View Details</a></div>
+<div class="card"><img src="Growbag.jpeg"><div><h3>Grow Bags</h3><p>Ready-to-use cocopeat grow bags.</p></div><a href="grow-bags.html">View Details</a></div>
+<div class="card"><img src="Polutary.jpeg"><div><h3>Poultry Coco Pith</h3><p>Highly absorbent poultry bedding.</p></div><a href="poultry-coco-pith.html">View Details</a></div>
+<div class="card"><img src="Nursery.jpeg"><div><h3>Nursery Cocopeat</h3><p>Fine cocopeat for seedlings.</p></div><a href="nursery-cocopeat.html">View Details</a></div>
 
 </div>
 </section>
 
 <section>
 <h2>Product Enquiry</h2>
-<form action="https://formsubmit.co/kccoproducts@gmail.com" method="POST">
-<input type="text" name="name" placeholder="Your Name" required>
-<input type="email" name="email" placeholder="Your Email" required>
-<input type="text" name="product" placeholder="Product Interested" required>
-<textarea name="message" placeholder="Your Requirement" required></textarea>
+<form onsubmit="sendEmail(); return false;">
+<input type="text" id="name" placeholder="Your Name" required>
+<input type="email" id="email" placeholder="Your Email" required>
+<input type="text" id="product" placeholder="Product Interested" required>
+<textarea id="message" placeholder="Your Requirement" required></textarea>
 <button type="submit">Send Enquiry</button>
 </form>
 </section>
 
 <section>
 <h2>Export Packing & Container Loading</h2>
-<p>Karthick Coirs supplies cocopeat in 5 kg compressed blocks and loose form with moisture-proof export packing.</p>
 <ul>
-<li>20 FT container – up to 18 MT</li>
-<li>40 FT container – up to 26 MT</li>
+<li>5 Kg compressed blocks & loose cocopeat</li>
+<li>20 FT container – 18 MT</li>
+<li>40 FT container – 26 MT</li>
 <li>Palletized & shrink wrapped</li>
 <li>Custom buyer branding</li>
 </ul>
@@ -181,13 +142,23 @@ footer{
 
 <section>
 <h2>Why Buy from Karthick Coirs?</h2>
-<p>We are a trusted cocopeat manufacturer from Palani supplying India & export markets with consistent quality, bulk capacity and competitive pricing.</p>
+<p>Trusted cocopeat manufacturer from Palani supplying India & export markets with stable quality and bulk capacity.</p>
 </section>
 
 <footer>
-📞 9363940486 | ✉ kccocoproducts@gmail.com  
-<br>© 2026 Karthick Coirs – Palani, Tamil Nadu
+📞 9363940486 | ✉ kccocoproducts@gmail.com <br>
+© 2026 Karthick Coirs
 </footer>
+
+<script>
+function sendEmail(){
+var n=document.getElementById("name").value;
+var e=document.getElementById("email").value;
+var p=document.getElementById("product").value;
+var m=document.getElementById("message").value;
+window.location.href="mailto:kccocoproducts@gmail.com?subject=New Enquiry from Website&body=Name:"+n+"%0AEmail:"+e+"%0AProduct:"+p+"%0ARequirement:"+m;
+}
+</script>
 
 </body>
 </html>
