--- a/index.html
+++ b/index.html
@@ -142,6 +142,27 @@ footer{
 
 <section>
 <h2>Why Buy from Karthick Coirs?</h2>
+  <section>
+<h2>Meet Our CEO</h2>
+
+<div style="display:flex;flex-wrap:wrap;gap:20px;align-items:center;">
+  
+  <div style="flex:1;">
+    <img src="Kclogo.jpeg" style="width:200px;border-radius:10px;">
+  </div>
+
+  <div style="flex:2;">
+    <h3>Karthick Venkidusamy</h3>
+    <p><strong>Founder & CEO</strong></p>
+    <p>
+      With over <strong>5+ years of experience</strong> in cocopeat manufacturing and export, 
+      Karthick Venkidusamy leads Karthick Coirs with a strong focus on quality, consistency and global standards.
+      Under his leadership, the company supplies premium cocopeat to domestic and international markets.
+    </p>
+  </div>
+
+</div>
+</section>
 <p>Trusted cocopeat manufacturer from Palani supplying India & export markets with stable quality and bulk capacity.</p>
 </section>
 
