--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   font-family:Georgia,serif;
   background:
     linear-gradient(rgba(0,0,0,.65), rgba(0,0,0,.65)),
-    url("coconut-bg.jpg") no-repeat center center fixed;
+    url("coconut-bg.jpeg") no-repeat center center fixed;
   background-size:cover;
   color:#222;
 }
