--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 <title>Karthick Coirs – Cocopeat Exporter</title>
 
 <style>
-body{
-  margin:0;
-  font-family:Georgia,serif;
-  background:
-    linear-gradient(rgba(0,0,0,.65), rgba(0,0,0,.65)),
-    url("coconut-bg.jpeg") no-repeat center center fixed;
-  background-size:cover;
-  color:#222;
+  body{
+    margin:0;
+    font-family: Georgia, serif;
+
+    background:
+      linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+      url('coconut-bg.jpeg');
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    color:#222;
+}
 }
 
 .wrapper{
@@ -113,6 +120,9 @@ footer{
 <h1>KARTHICK COIRS</h1>
 <p>Premium Cocopeat & Coir Products Manufacturer</p>
 <p>Palani, Tamil Nadu – India</p>
+<p style="font-size:16px;color:#2e7d32;font-weight:bold;">
+GSTIN: 33CJRPV0480M1ZI
+</p>
 </header>
 
 <section>
@@ -182,7 +192,8 @@ With 5+ years of experience in cocopeat manufacturing and export, Karthick Venki
 </section>
 
 <footer>
-📞 9363940486 | ✉ kccocoproducts@gmail.com <br>
+📞 9363940486 | ✉ kccocoproducts@gmail.com 
+  GSTIN: 33CJRPV0480M1ZI <br>
 © 2026 Karthick Coirs – Palani, Tamil Nadu
 </footer>
 
