--- a/index.html
+++ b/index.html
@@ -2,112 +2,122 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Karthick Coirs is a leading cocopeat manufacturer and exporter in India. We supply Low EC cocopeat, High EC cocopeat, grow bags, poultry coco pith and nursery cocopeat from Palani Tamil Nadu.">
-<meta name="keywords" content="Cocopeat Manufacturer, Cocopeat Exporter India, Low EC Cocopeat, High EC Cocopeat, Grow Bags, Poultry Coco Pith, Nursery Cocopeat, Coir Pith">
-<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Karthick Coirs – Cocopeat Exporter</title>
 
+<meta name="description" content="Karthick Coirs is a leading cocopeat manufacturer and exporter in India. We supply Low EC cocopeat, High EC cocopeat, grow bags, poultry coco pith and nursery cocopeat from Palani Tamil Nadu.">
+<meta name="keywords" content="Cocopeat Manufacturer, Cocopeat Exporter India, Low EC Cocopeat, High EC Cocopeat, Grow Bags, Poultry Coco Pith, Nursery Cocopeat, Coir Pith">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-  
-  body{
-    margin:0;
-    font-family: Georgia, serif;
-
-    background:
-      linear-gradient(rgba(255,255,255,0.92), rgba(255,255,255,0.92)),
-      url('coconut-bg.jpeg');
-
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-    color:#222;
-}
+body{
+margin:0;
+font-family:Georgia,serif;
+background:
+linear-gradient(rgba(0,0,0,0.45),rgba(0,0,0,0.45)),
+url('coconut-bg.jpeg');
+background-size:cover;
+background-attachment:fixed;
+background-position:center;
+color:#222;
 }
 
 .wrapper{
-  background:rgba(255,255,255,0.92);
+background:rgba(255,255,255,0.94);
+max-width:1200px;
+margin:auto;
 }
 
 header{
-  text-align:center;
-  padding:70px 20px;
+text-align:center;
+padding:80px 20px;
 }
 
 header img{
-  width:120px;
-  background:white;
-  padding:10px;
-  border-radius:50%;
+width:120px;
+background:white;
+border-radius:50%;
+padding:10px;
 }
 
 h1{
-  font-size:42px;
-  color:#1b5e20;
-  margin:20px 0 5px;
-}
-
-section{
-  max-width:1100px;
-  margin:auto;
-  padding:40px 20px;
+color:#1b5e20;
+font-size:42px;
+margin:20px 0 10px;
 }
 
 h2{
-  color:#1b5e20;
-  border-bottom:3px solid #1b5e20;
-  padding-bottom:5px;
+color:#1b5e20;
+border-bottom:3px solid #1b5e20;
+padding-bottom:10px;
+}
+
+section{
+padding:60px 30px;
 }
 
 .products{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:25px;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:30px;
 }
 
 .card{
-  border:1px solid #ddd;
-  background:white;
+border:1px solid #ddd;
+border-radius:10px;
+overflow:hidden;
+box-shadow:0 10px 25px rgba(0,0,0,0.1);
 }
 
 .card img{
-  width:100%;
-  height:220px;
-  object-fit:cover;
+width:100%;
+height:230px;
+object-fit:cover;
 }
 
 .card div{
-  padding:15px;
+padding:20px;
 }
 
 .card a{
-  display:block;
-  background:#1b5e20;
-  color:white;
-  text-align:center;
-  padding:12px;
-  text-decoration:none;
+display:block;
+background:#1b5e20;
+color:white;
+text-align:center;
+padding:14px;
+text-decoration:none;
+font-weight:bold;
 }
 
-form input,form textarea{
-  width:100%;
-  padding:10px;
-  margin:10px 0;
+.white-box{
+background:white;
+padding:50px 30px;
+border-radius:12px;
+box-shadow:0 10px 30px rgba(0,0,0,0.15);
+margin:50px 0;
 }
 
-form button{
-  background:#1b5e20;
-  color:white;
-  padding:12px 30px;
-  border:none;
+input,textarea{
+width:100%;
+padding:12px;
+margin:10px 0;
+border-radius:6px;
+border:1px solid #ccc;
+}
+
+button{
+background:#1b5e20;
+color:white;
+border:none;
+padding:14px 30px;
+font-size:16px;
+cursor:pointer;
 }
 
 footer{
-  background:#1b5e20;
-  color:white;
-  text-align:center;
-  padding:25px;
+background:#1b5e20;
+color:white;
+text-align:center;
+padding:30px;
 }
 </style>
 </head>
@@ -121,9 +131,7 @@ footer{
 <h1>KARTHICK COIRS</h1>
 <p>Premium Cocopeat & Coir Products Manufacturer</p>
 <p>Palani, Tamil Nadu – India</p>
-<p style="font-size:16px;color:#2e7d32;font-weight:bold;">
-GSTIN: 33CJRPV0480M1ZI
-</p>
+<p><strong>GSTIN:</strong> 33CJRPV0480M1ZI</p>
 </header>
 
 <section>
@@ -132,69 +140,88 @@ GSTIN: 33CJRPV0480M1ZI
 
 <div class="card">
 <img src="Lowec.jpeg">
-<div><h3>Low EC Cocopeat</h3><p>Washed and buffered cocopeat for export & sensitive crops.</p></div>
+<div>
+<h3>Low EC Cocopeat</h3>
+<p>Washed and buffered cocopeat ideal for sensitive crops, hydroponics and export quality farming.</p>
+</div>
 <a href="low-ec-cocopeat.html">View Details</a>
 </div>
 
 <div class="card">
 <img src="Highec.jpeg">
-<div><h3>High EC Cocopeat</h3><p>Natural cocopeat for soil conditioning & farming.</p></div>
+<div>
+<h3>High EC Cocopeat</h3>
+<p>Natural cocopeat used for soil conditioning, landscaping and general agriculture.</p>
+</div>
 <a href="high-ec-cocopeat.html">View Details</a>
 </div>
 
 <div class="card">
 <img src="Growbag.jpeg">
-<div><h3>Grow Bags</h3><p>Ready to use cocopeat grow bags.</p></div>
+<div>
+<h3>Grow Bags</h3>
+<p>Ready-to-use cocopeat grow bags for greenhouse vegetables & flowers.</p>
+</div>
 <a href="grow-bags.html">View Details</a>
 </div>
 
 <div class="card">
 <img src="Polutary.jpeg">
-<div><h3>Poultry Coco Pith</h3><p>High absorbency poultry bedding.</p></div>
+<div>
+<h3>Poultry Coco Pith</h3>
+<p>Highly absorbent bedding material for poultry farms.</p>
+</div>
 <a href="poultry-coco-pith.html">View Details</a>
 </div>
 
 <div class="card">
 <img src="Nursery.jpeg">
-<div><h3>Nursery Cocopeat</h3><p>Fine cocopeat for seedlings and nurseries.</p></div>
+<div>
+<h3>Nursery Cocopeat</h3>
+<p>Fine cocopeat for seed trays, polybags and nursery plants.</p>
+</div>
 <a href="nursery-cocopeat.html">View Details</a>
 </div>
 
 </div>
 </section>
 
-<section>
+<div class="white-box">
 <h2>Meet Our CEO</h2>
-<p><strong>Karthick Venkidusamy</strong> – Founder & CEO</p>
+<p><strong>Karthick Venkidusamy – Founder & CEO</strong></p>
 <p>
-With 5+ years of experience in cocopeat manufacturing and export, Karthick Venkidusamy leads Karthick Coirs with a focus on quality, consistency and global standards.
+With 5+ years of experience in cocopeat manufacturing and export, Karthick Venkidusamy leads Karthick Coirs with a strong focus on quality, consistency and global standards. Under his leadership, the company has built a reputation for reliable supply, premium grade cocopeat and international export excellence.
 </p>
-</section>
+</div>
 
-<section>
+<div class="white-box">
 <h2>Product Enquiry</h2>
-<form action="mailto:kccocoproducts@gmail.com" method="post" enctype="text/plain">
-<input type="text" name="Name" placeholder="Your Name" required>
-<input type="email" name="Email" placeholder="Your Email" required>
-<input type="text" name="Product" placeholder="Product Interested">
-<textarea name="Message" placeholder="Your Requirement"></textarea>
+<form action="https://formsubmit.co/kccocoproducts@gmail.com" method="POST">
+<input type="text" name="name" placeholder="Your Name" required>
+<input type="email" name="email" placeholder="Your Email" required>
+<input type="text" name="product" placeholder="Product Interested" required>
+<textarea name="message" placeholder="Your Requirement" required></textarea>
 <button type="submit">Send Enquiry</button>
 </form>
-</section>
+</div>
 
-<section>
-<h2>Export Packing</h2>
+<div class="white-box">
+<h2>Export Packing & Container Loading</h2>
+<p>
+We supply 5 Kg compressed cocopeat blocks and loose cocopeat packed in moisture-proof poly wrapping. Products are palletized and shrink wrapped for safe export container loading.
+</p>
 <ul>
-<li>5 kg compressed blocks</li>
-<li>20 FT – 18 MT | 40 FT – 26 MT</li>
-<li>Moisture proof packing</li>
-<li>Custom labeling</li>
+<li>20 FT container – up to 18 MT</li>
+<li>40 FT container – up to 26 MT</li>
+<li>Moisture proof export packing</li>
+<li>Custom buyer labeling</li>
+<li>Fumigation & palletized loading</li>
 </ul>
-</section>
+</div>
 
 <footer>
-📞 9363940486 | ✉ kccocoproducts@gmail.com 
-  GSTIN: 33CJRPV0480M1ZI <br>
+📞 9363940486 | ✉ kccocoproducts@gmail.com <br>
+GSTIN: 33CJRPV0480M1ZI <br>
 © 2026 Karthick Coirs – Palani, Tamil Nadu
 </footer>
 
