--- a/index.html
+++ b/index.html
@@ -226,6 +226,25 @@ GSTIN: 33CJRPV0480M1ZI <br>
 </footer>
 
 </div>
+</div>
+</div>
+</div>
 
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/919363940486" target="_blank" style="
+position:fixed;
+bottom:20px;
+right:20px;
+background:#25D366;
+color:white;
+padding:15px 20px;
+border-radius:50px;
+font-size:18px;
+text-decoration:none;
+box-shadow:0 4px 10px rgba(0,0,0,0.3);
+z-index:999;
+">
+💬 WhatsApp
+</a>
 </body>
 </html>
